# Mail

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.txt
assets/: app.html  bundle.css
backend/: Command.cpp  Command.hpp  main.cpp
backend/GUI/: MailApp.cpp  MailApp.h
backend/GUI/Font/: Font.h  FontLoader.cpp  FontLoader.h
backend/PGP/: PGP.cpp  PGP.hpp
backend/account/: AccountManager.cpp  AccountManager.hpp
backend/mail/: Mailer.cpp  Mailer.hpp
backend/mail/lib/: IMAPClient.cpp  IMAPClient.h  SMTPClient.cpp
backend/model/: Account.cpp  Account.hpp  Folder.cpp  Folder.hpp  Mail.cpp  Mail.hpp
backend/socket/: Socket.cpp  Socket.hpp
backend/utils/QuotedPrintable/: QuotedPrintable.hpp
cmake/: App.cmake
frontend/: .eslintignore  .eslintrc.json  App.jsx  App.scss  Backend.js  Model.js  Read.jsx  index.js  index.jsx  package-lock.json  package.json  theme.css  theme.js  theme.scss  webpack.config.js
frontend/Folders/: Folder.jsx  FolderList.jsx
frontend/Mails/: Mail.jsx  MailList.jsx  MailReader.jsx
frontend/ZI/: ZI.jsx  ZI.scss
frontend/ZI/Conversation/: Conversation.jsx  Conversation.scss
frontend/ZI/Mail/: Mail.jsx  Mail.scss
frontend/actions/: Account.js  Folder.js  Mail.js
frontend/common/: Button.jsx  _common.scss
frontend/common/Button/: Button.css  Button.jsx  Button.scss
frontend/common/Checkbox/: Checkbox.css  Checkbox.jsx  Checkbox.scss
frontend/common/Conversation/: Conversation.jsx
frontend/common/Conversations/: Conversations.jsx  Conversations.scss
frontend/common/Input/: Input.css  Input.jsx  Input.scss
frontend/common/MailEntry/: MailEntry.jsx  MailEntry.scss
frontend/common/MailList/: MailList.jsx
frontend/common/MailRead/: MailRead.jsx
frontend/common/Select/: Select.css  Select.jsx  Select.scss
frontend/common/Threads/: Threads.jsx  Threads.scss
frontend/helpers/: download.js  extractSummary.js  openLink.js
frontend/hoc/: WithAccount.jsx  WithConversation.jsx  WithFolder.jsx
frontend/list/: Folder.jsx  FolderList.jsx  List.jsx  MailList.jsx
frontend/mail/MailEntry/: MailEntry.jsx  MailEntry.scss
frontend/mail/MailRead/: MailRead.jsx  MailRead.scss
frontend/model/: Backend.js  Storage.js  actions.js  context.js  store.js  types.js  withAppContext.jsx
frontend/old/Folders/: Folder.jsx  FolderList.jsx
frontend/old/Mails/: Mail.jsx  MailPart.jsx  MailReader.jsx
frontend/read/: Folder.jsx  FolderList.jsx  Mail.jsx  MailHeader.jsx  MailList.jsx  Read.jsx
frontend/style/: mixins.scss  theme.scss  variables.scss
frontend/views/: List.jsx  List.scss  Mails.jsx  _views.scss
frontend/views/House/: House.jsx  House.scss
src/: Command.cpp  Command.hpp  main.cpp
src/GUI/: MailApp.cpp  MailApp.h
src/PGP/: PGP.cpp
src/account/: AccountManager.cpp  AccountManager.hpp
src/mail/: Mailer.cpp  Mailer.hpp
src/mail/lib/: MAILClient.h  POPClient.cpp
src/socket/: Socket.cpp  Socket.hpp
src/utils/QuotedPrintable/: README.md
test/: package-lock.json  package.json  test.js  testAccount.js  testFolder.js  testMail.js
